# pass-ssh-unpack

./: .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md
.github/workflows/: publish.yml  release.yml  version-check.yml
docs/: proton-pass.md  teleport.md
src/: cli.rs  config.rs  error.rs  interactive.rs  main.rs  platform.rs  progress.rs  proton_pass.rs  rclone.rs  ssh.rs  teleport.rs
