[package]
name = "pass-ssh-unpack"
version = "0.1.2"
authors = ["Shane Stanley <shane@thedragon.dev>"]
edition = "2021"
description = "A utility for unpacking proton's pass-cli ssh keys into usable ssh and rclone configurations."
license = "MIT"
repository = "https://github.com/Frosthaven/pass-ssh-unpack"
readme = "README.md"
keywords = ["ssh", "proton-pass", "password-manager", "rclone"]
categories = ["command-line-utilities"]

[package.metadata.release]
publish = false
push = false
tag = false
pre-release-commit-message = "chore: release v{{version}}"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
glob = "0.3"
anyhow = "1"
which = "6"
hostname = "0.4"
sanitize-filename = "0.6"
rpassword = "7"

[profile.release]
lto = true
strip = true
